# PR-Summarizer

./: README.md  test_validation.py
.github/: copilot-instructions.md
.specify/memory/: constitution.md
.specify/templates/: plan-template.md
Docs/: 001.txt
backend/: .env  .env.example  .pre-commit-config.yaml  Dockerfile.dev  debug_github.py  debug_pr_structure.py  debug_raw_api.py  pyproject.toml  requirements-dev.txt  requirements.txt  test_gemini_models.py  test_github_steps.py  test_mygpt.py  test_summary_debug.py  test_system.py  test_workwave.py
backend/src/: __init__.py  main.py
backend/src/api/: auth.py  main.py  summaries.py
backend/src/api/routers/: summary.py
backend/src/database/: __init__.py  session.py
backend/src/models/: __init__.py  auth.py  config.py  context.py  error_responses.py  pr_summary.py  request.py
backend/src/services/: __init__.py  auth.py  gemini.py  github.py  jira.py  summary_service.py
backend/src/utils/: __init__.py  auth_dependencies.py  exceptions.py  health.py  jwt.py  logger.py  validators.py
backend/tests/: conftest.py  test_config.py  test_error_responses.py  test_health.py  test_main.py  test_utils.py
backend/tests/contract/: README.md  test_summary_api.py
backend/tests/e2e/: README.md
backend/tests/integration/: README.md  test_summary_flow.py
backend/tests/performance/: README.md
backend/tests/unit/: test_gemini_service.py  test_github_service.py  test_jira_service.py  test_sample.py  test_summary_models.py
backend/tests/unit/utils/: test_exceptions.py  test_logger.py  test_validators.py
backend/tests/user_stories/: test_us1_basic_pr_summary.py
config/: .env  .env.example  docker-compose.yml  google-service-account.json.json
frontend/: .prettierrc.js  Dockerfile.dev  package-lock.json  package.json  tsconfig.json
frontend/public/: index.html
frontend/src/: App.css  App.tsx  index.css  index.tsx
frontend/src/components/: ErrorBoundary.css  ErrorBoundary.tsx  InputForm.css  InputForm.tsx  SummaryDisplay.css  SummaryDisplay.tsx
frontend/src/services/: api.ts
specs/001-ai-powered-tool/: data-model.md  plan.md  quickstart.md  research.md  spec.md  tasks.md
specs/001-ai-powered-tool/checklists/: requirements.md
specs/001-ai-powered-tool/contracts/: api-spec.yaml
src/api/routers/: summary.py
